codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_capacity_notification.snap
---
source: tui/src/chatwidget/tests/notifications.rs
expression: notification.display()
---
Model at capacity for five minutes. Still retrying.
