codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__note_to_self_completed_turn.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: rendered
---

  Note to self
  remember this
