codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__notes_indicator_narrow.snap
---
source: tui/src/chatwidget/tests/notes_tests.rs
expression: "render_bottom_popup(&chat, 32)"
---
1 note to self · /nts to view

› Draft stays here

  5.6-Sol default · tmp/project
